--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "Beapple"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "Beapple's story"
 name                     : "Beapple"
 description              : "Beapple's website."
 url                      : "https://beapple.github.io"
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Beapple"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "**beapple**"
   location         : "Somewhere"
   email            :
